# westwell_test_project

./: CMakeLists.txt  README.md
src/: main.cpp
src/westwell-project/src/launch/: package.xml  run.launch
src/westwell-project/src/test/: CMakeLists.txt  package.xml
src/westwell-project/src/test/src/: firstnode.cpp  secondnode.cpp
src/westwell-project/src/westwell-test/: CMakeLists.txt
src/westwell-project/src/westwell-test/src/: main.cpp  node.cpp  node_test.cpp
